Update pt-BR l10n for mail

--- a/pt-BR/mail/chrome/messenger/aboutRights.properties
+++ b/pt-BR/mail/chrome/messenger/aboutRights.properties
@@ -1,5 +1,4 @@
-aboutRightsTitle=Sobre os seus direitos
 buttonLabel=Conheça seus direitos…
 buttonAccessKey=C
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=O %S é um software livre da Mozilla Foundation, uma organização sem fins lucrativos.
+notifyRightsText=O %S é um software livre da Mozilla Foundation, uma organização sem fins lucrativos.
