--- a/pt-BR/mail/chrome/messenger/activity.properties
+++ b/pt-BR/mail/chrome/messenger/activity.properties
@@ -5,54 +5,80 @@ notStarted=Not Started
 failed=Failed
 waitingForInput=Waiting for input
 waitingForRetry=Waiting for retry
-completed=Completed
-canceled=Canceled
+completed=Concluído
+canceled=Cancelado
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=Ontem
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#1 #2
 
-# Send Message
-sendingMessage=Sending Message
-# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Sending Message to %S
-sentMessage=Sent Message
-# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Sent Message to %S
-failedToSendMessage=Failed to send message
-# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Failed to send message to %S
+# LOCALIZATION NOTE (sendingMessages): this is used as a title for grouping processes in the activity manager when sending email.
+sendingMessages=Enviando mensagens
+# LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sendingMessage=Enviando mensagem
+sendingMessageWithSubject=Enviando mensagem: %S
+copyMessage=Copiando mensagem para a pasta “Enviados”
+sentMessage=Mensagem enviada
+# LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
+sentMessageWithSubject=Mensagem enviada: %S
+failedToSendMessage=Falha no envio de mensagem
+failedToCopyMessage=Falha na cópia de mensagem
+# LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToSendMessageWithSubject=Falha no envio de mensagem: %S
+# LOCALIZATION NOTE (failedToCopyMessageWithSubject): %S will be replaced by the subject of the message being sent.
+failedToCopyMessageWithSubject=Falha na cópia de mensagem: %S
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
 # Place the word %2$S in your translation where the total number of pending messages should appear.
 # Place the word %3$S in your translation where the name of the folder being processed should appear.
-autosyncProcessProgress=Downloading %1$S of %2$S in %3$S
+autosyncProcessProgress=Recebendo %1$S/%2$S em %3$S
 # LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
-autosyncProcessDisplayText=Bringing folder %S up to date
+autosyncProcessDisplayText=Atualizando a pasta %S
 # LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
-autosyncEventDisplayText=%S is up to date
+autosyncEventDisplayText=A conta %S está atualizada
 # LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
-autosyncEventStatusText=Total number of messages downloaded: %S
-autosyncEventStatusTextNoMsgs=No messages downloaded
+autosyncEventStatusText=Número total de mensagens recebidas: %S
+autosyncEventStatusTextNoMsgs=Nenhuma mensagem recebida
 # LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
-autosyncContextDisplayText=Synchronizing: %S
+autosyncContextDisplayText=Sincronizando: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Excluída #1 mensagem;Excluídas #1 mensagens
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=Excluída #1 mensagem de #2;Excluídas #1 mensagens de #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
-movedMessages=Moved #1 message from #2 to #3;Moved #1 messages from #2 to #3
+movedMessages=Movida #1 mensagem de #2 para #3;Movidas #1 mensagens de #2 para #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
-copiedMessages=Copied #1 message from #2 to #3;Copied #1 messages from #2 to #3
+copiedMessages=Copiadas #1 mensagem de #2 para #3;Copiadas #1 mensagens de #2 para #3
 # LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
-fromServerToServer=from #1 to #2
+fromServerToServer=de #1 para #2
 # LOCALIZATION NOTE (deletedFolder): #1 folder name
-deletedFolder=Deleted folder #1
+deletedFolder=Excluída a pasta #1
 # LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
-movedFolder=Moved folder #1 into folder #2
+movedFolder=Pasta #1 movida para a pasta #2
 # LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
-copiedFolder=Copied folder #1 into folder #2
+copiedFolder=Pasta #1 copiada na pasta #2
 # LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
-renamedFolder=Renamed folder #1 to #2
+renamedFolder=Pasta #1 renomeada para #2
+indexing=Indexando mensagens
+# LOCALIZATION NOTE (indexingFolder): #1 is a folder name
+indexingFolder=Indexando mensagens em #1
+indexingStatusVague=Determinando quais mensagens indexar
+# LOCALIZATION NOTE (indexingFolderStatusVague): #1 is a folder name
+indexingFolderStatusVague=Determinando quais mensagens indexar em #1
+# LOCALIZATION NOTE (indexingStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+indexingStatusExact=Indexando #1 de #2 mensagem;Indexando #1 de #2 mensagens (#3% concluído)
+# LOCALIZATION NOTE (indexingFolderStatusExact):
+#   #1 is the number of the message currently being indexed
+#   #2 is the total number of messages being indexed
+#   #3 is the percentage of indexing that is complete
+#   #4 is a folder name
+indexingFolderStatusExact=Indexando #1 de #2 mensagem em #4;Indexando #1 de #2 mensagens em #4 (#3% concluído)
+# LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
+indexedFolder=Indexando #1 mensagem em #2;Indexando #1 mensagens em #2
+# LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
+indexedFolderStatus=Decorrido #1 segundo;Decorridos #1 segundos
