--- a/pt-BR/mail/chrome/messenger/messenger.properties
+++ b/pt-BR/mail/chrome/messenger/messenger.properties
@@ -44,6 +44,8 @@ newFolderMenuItem=Pasta…
 newSubfolderMenuItem=Subpasta…
 newFolder=Nova pasta…
 newSubfolder=Nova pasta…
+markFolderRead=Marcar pasta como lida;Marcar pastas como lidas
+markNewsgroupRead=Mark Newsgroup Read;Mark Newsgroups Read
 folderProperties=Propriedades da pasta
 newTag=Nova tag…
 getNextNMessages=Receber próximas %S mensagens
@@ -63,8 +65,8 @@ LoadingMessageToPrint=Carregando mensagem para imprimir…
 MessageLoaded=Mensagens carregadas…xxx
 PrintingMessage=Imprimindo mensagem…
 PrintPreviewMessage=Visualizando impressão da mensagem…
-PrintingCard=Imprimindo contato…
-PrintPreviewCard=Visualizando impressão do contato…
+PrintingContact=Imprimindo contato…
+PrintPreviewContact=Visualizando impressão do contato…
 PrintingAddrBook=Imprimindo catálogo de endereços…
 PrintPreviewAddrBook=Visualizando impressão do catálogo de endereços…
 PrintingComplete=Concluído.
@@ -86,7 +88,7 @@ compactingFolder=Condensando a pasta %S…
 doneCompacting=Concluído, pastas condensadas
 autoCompactAllFoldersTitle=Condensar pastas
 autoCompactAllFolders=Gostaria de condensar as pastas locais e offline para salvar espaço em disco?
-autoCompactAlwaysAskCheckbox=Always ask me before compacting folders automatically
+autoCompactAlwaysAskCheckbox=Sempre perguntar antes de condensar pastas automaticamente
 compactNowButton=Compact &Now
 
 confirmFolderDeletionForFilter=A exclusão da pasta “%S” desativará os filtros associados a ela. Tem certeza que deseja excluir a pasta?
@@ -122,8 +124,8 @@ messageCollapsed=Collapsed
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<não especificado>
-smtpServer-ConnectionSecurityType-0=None
-smtpServer-ConnectionSecurityType-1=STARTTLS, if available
+smtpServer-ConnectionSecurityType-0=Nenhuma
+smtpServer-ConnectionSecurityType-1=STARTTLS, se disponível
 smtpServer-ConnectionSecurityType-2=STARTTLS
 smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Não
@@ -156,7 +158,7 @@ documentLoading=Carregando mensagem…
 autosyncProgress=Sincronizando mensagens em %1$S de %2$S…
 
 unreadMsgStatus=Não lidas: %S
-selectedMsgStatus=Selected: %S
+selectedMsgStatus=Selecionadas: %S
 totalMsgStatus=Total: %S
 
 # localized folder names
@@ -171,8 +173,7 @@ draftsFolderName=Rascunhos
 templatesFolderName=Modelos
 outboxFolderName=Saída
 junkFolderName=Spam
-archivesFolderName=Archives
-
+archivesFolderName=Arquivos
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -244,7 +245,7 @@ junk=Marcado como spam
 junkScoreOriginPlugin=Plugin
 junkScoreOriginFilter=Filtro
 junkScoreOriginWhitelist=Whitelist
-junkScoreOriginUser=User
+junkScoreOriginUser=Usuário
 junkScoreOriginImapFlag=IMAP Flag
 
 # for the has attachment picker in search and mail views
@@ -315,6 +316,9 @@ nocachedbodytitle=<TITLE>Saia do modo offline para exibir esta mensagem</TITLE>\
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Confirmar
 confirmUnsubscribeText=Tem certeza que deseja cancelar a inscrição de %S?
+confirmUnsubscribeManyText=Tem certeza que deseja cancelar a inscrição nestes newsgroups?
+feedNoSummaryTitle=No Feed Summary
+feedNoSummaryAlert=This is a news feed in an old format, which does not store the Summary of the news item. Therefore it cannot be displayed.
 
 # msgHdrViewOverlay.js
 openLabel=Abrir
@@ -356,11 +360,11 @@ newBiffNotification_messages=%1$S tem %2$S novas mensagens
 #  %1$S is the number of new messages
 #  %2$S is a list of names and/or email addresses separated by biffNotification_separator
 #  %3$S is the number of new messages not displayed in the biff alert
-macBiffNotification_message=%1$S new message from %2$S.
-macBiffNotification_messages=%1$S new messages from %2$S.
-macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+macBiffNotification_message=%1$S nova mensagem de %2$S.
+macBiffNotification_messages=%1$S novas mensagens de %2$S.
+macBiffNotification_messages_extra=%1$S novas mensagens de %2$S e mais %3$S.
 # Used to separate names/email addresses in a list.  Note the trailing space ', '
-macBiffNotification_separator=, 
+macBiffNotification_separator=,
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S de %SKB usados
@@ -420,20 +424,28 @@ confirmPhishingTitle=Alerta antifraude
 confirmPhishingUrl=O %1$S acha que esta mensagem é um golpe. Os links da mensagem podem estar tentando se passar por uma página que você deseja visitar. Tem certeza que deseja visitar %2$S?
 
 # Check for Updates
+# LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
+# Which one is used depends on Update process state.
 updatesItem_default=Verificar atualizações…
 updatesItem_defaultFallback=Verificar atualizações…
+updatesItem_default.accesskey=C
 updatesItem_downloading=Recebendo o %S…
 updatesItem_downloadingFallback=Recebendo a atualização…
+updatesItem_downloading.accesskey=D
 updatesItem_resume=Continuar recebendo o %S…
 updatesItem_resumeFallback=Continuar recebendo a atualização…
+updatesItem_resume.accesskey=D
 updatesItem_pending=Aplicar agora a atualização recebida…
 updatesItem_pendingFallback=Aplicar agora a atualização recebida…
+updatesItem_pending.accesskey=D
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Todas as pastas
 folderPaneHeader_unread=Pastas não lidas
 folderPaneHeader_favorite=Pastas favoritas
 folderPaneHeader_recent=Pastas recentes
+folderPaneHeader_smart=Smart Folders
+smartAccountName=Smart Folders
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
@@ -448,30 +460,44 @@ moveToFolderAgainAccessKey=o
 copyToFolderAgain=Copiar de novo para “%1$S”
 copyToFolderAgainAccessKey=C
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1= Sempre carregar imagens externas de %1$S
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2= Sempre carregar conteúdo remoto de %1$S
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Nova mensagem
 
 # mailCommands.js
 emptyJunkTitle=Confirmar
-emptyJunkMessage=Tem certeza que deseja excluir permanentemente todas as mensagens e pastas da pasta “Spam”?
+emptyJunkMessage=Tem certeza que deseja excluir permanentemente da pasta “Spam” todas as mensagens e pastas?
 emptyJunkDontAsk=Não perguntar de novo
 emptyTrashTitle=Confirmar
-emptyTrashMessage=Tem certeza que deseja excluir permanentemente todas as mensagens e pastas da Lixeira?
+emptyTrashMessage=Tem certeza que deseja excluir permanentemente da Lixeira todas as mensagens e pastas?
 emptyTrashDontAsk=Não perguntar de novo
 
 # junkCommands.js
 junkAnalysisPercentComplete=Junk analysis %S complete
 processingJunkMessages=Processing Junk Messages
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Arquivo não encontrado
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = O arquivo %S não existe.
+
+fileEmptyTitle = Arquivo vazio
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = O arquivo %S está vazio.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Você
 
-# The what's new tab title, shown on version update
-whatsNew=What\'s New
+# Shown when content tabs are being loaded.
+loadingTab=Carregando…
+
+applyToCollapsedMsgsTitle=Confirmar exclusão de mensagens não exibidas
+applyToCollapsedMsgs=Alerta - todas as mensagens agrupadas, que no momento não são exibidas, serão excluídas.
+applyToCollapsedAlwaysAskCheckbox=Sempre perguntar antes de excluir as mensagens não exibidas de agrupamentos
+applyNowButton=Aplicar
 
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
@@ -480,7 +506,7 @@ whatsNew=What\'s New
 # the header for the group (when sorting/grouping on the why column.)  Short
 # strings are preferable so the why column can be understood without taking up
 # too much space.
-glodaSearch_results_why_contact=Contact
+glodaSearch_results_why_contact=Contato
 glodaSearch_results_why_subject=Assunto
 glodaSearch_results_why_body=Texto da mensagem
 glodaSearch_results_why_attachment=Anexo
