--- a/pt-BR/mail/chrome/messenger/imapMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/imapMsgs.properties
@@ -36,6 +36,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Login Failed
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Login to server %S failed.
+imapLoginFailedRetryButton=&Retry
+imapLoginFailedEnterNewPasswordButton=&Enter New Password
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -131,27 +138,6 @@
 ## @loc None
 5015=Recebendo mensagem…
 
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Verificando o namespace IMAP…
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021="O servidor de mensagens indica que você não teria nenhuma pasta particular. Por favor, verifique suas inscrições.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Qualquer pasta que você deixar cancelada não constará em sua lista de pastas, mas podem ser inscritas depois selecionando-se Arquivo / Inscrever.
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Por favor, selecione as pastas nas quais deseja inscrever-se através da janela Inscrever…
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=O upgrade foi bem-sucedido.
-
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
@@ -168,20 +154,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=O conteúdo da mensagem será carregado na medida do necessário.
-
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=Erro IMAP: a mensagem não pôde ser salva devido a um erro.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=Erro IMAP: as informações da pasta online não puderam ser carregadas.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Falha com o nome de usuário e senha para o servidor %S.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
@@ -228,12 +200,6 @@
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
 5043=Copiando mensagem para “%S”…
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Abrindo pasta %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
@@ -381,10 +347,6 @@
 ## @loc None
 5082=Pasta administrativa
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Desconhecido
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Este servidor não suporta o compartilhamento de pastas.
@@ -396,10 +358,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090= O servidor %S foi desconectado. O servidor pode estar com problemas ou pode haver falha na rede.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Falha com o nome de usuário e senha.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Deseja inscrever-se em %1$S?
@@ -439,10 +397,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Copiando mensagem %1$S/%2$S para %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Você não pode entrar com seu nome de usuário em %S porque o servidor desativou o login. Tente conectar-se usando SSL ou TLS alterando as configurações desta conta.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -462,3 +416,8 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=E&xcluir pasta
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Você não pode entrar em %S porque o servidor não permite autenticação não codificada sem STARTTLS ou SSL/TLS. Tente ativar a segurança da conexão ou a autenticação segura nas configurações da conta.
