--- a/pt-BR/mail/chrome/messenger/importMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/importMsgs.properties
@@ -297,7 +297,7 @@ ImportSettingsSuccess=As configurações foram importadas de %S
 #Error string for mail import
 ImportMailBadModule=Não foi possível carregar o módulo de importação de mail
 ImportMailNotFound=Não foi possível localizar mensagens para importar. Certifique-se de que o aplicativo de email está instalado corretamente em seu computador.
-ImportEmptyAddressBook=Can\'t import empty address book %S.
+ImportEmptyAddressBook=Não foi possível importar o catálogo de endereços vazio %S.
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
 ImportMailFailed=Um erro ocorreu ao importar mensagens de %S
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
@@ -324,7 +324,7 @@ ImportFiltersPartial=Os filtros foram parcialmente importados do %S. Alertas aba
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 MailProgressMeterText=Convertendo caixas de mensagens de %S
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-AddrProgressMeterText=Convertendo catálogo de endereços de %S
+AddrProgressMeterText=Convertendo catálogos de %S
 
 #Import file dialog strings
 ImportSelectSettings=Selecione o arquivo de configurações
@@ -343,7 +343,7 @@ Comm4xFiles=Arquivos de catálogo de endereços do Communicator (*.na2)
 # Folder Names for imported Mail
 DefaultFolderName=Mail importado
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
-ImportModuleFolderName=%S Import
+ImportModuleFolderName=Importação de %S
 
 # LOCALIZATION NOTE : "Communicator 4.x" is the used for previous versions of Netscape Communicator
 # Please translate using the brandname in respective languages for Netscape Communicator 4 releases.
