Update pt-BR l10n for mail

--- a/pt-BR/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/pt-BR/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,7 +1,7 @@
-subscribe-validating-feed=Verifying the feed…
+subscribe-validating-feed=Verificando o RSS…
 subscribe-cancelSubscription=Tem certeza que deseja cancelar a inscrição do RSS atual?
 subscribe-cancelSubscriptionTitle=Inscrevendo um RSS…
-subscribe-noFeedIsSelected=<no feed selected>
+subscribe-noFeedIsSelected=<nenhum RSS selecionado>
 subscribe-feedAlreadySubscribed=Já há uma inscrição para este RSS.
 subscribe-errorOpeningFile=Não foi possível abrir o arquivo.
 
