latest changes for TB3b3

--- a/nl/mail/chrome/messenger/search-attributes.properties
+++ b/nl/mail/chrome/messenger/search-attributes.properties
@@ -37,4 +37,5 @@ JunkPercent=Ongewensteberichtenpercentage
 AttachmentStatus=Bijlagestatus
 JunkStatus=Ongewensteberichtenstatus
 Label=Label
-Customize=Aanpassen…
+Customize=Aanpassen\u2026
+MissingCustomTerm=Aangepaste term niet aanwezig
