--- a/sv-SE/mail/installer/custom.properties
+++ b/sv-SE/mail/installer/custom.properties
@@ -70,7 +70,7 @@ SURVEY_TEXT=&Berätta för oss vad du tyckte om $BrandShortName
 LAUNCH_TEXT=&Starta $BrandFullName nu
 CREATE_ICONS_DESC=Skapa ikoner för $BrandShortName:
 ICONS_DESKTOP=På S&krivbordet
-ICONS_STARTMENU=I &Start-menyns Program-mapp
+ICONS_STARTMENU=I &Start-menyns Programmapp
 ICONS_QUICKLAUNCH=I Sna&bbstartfältet
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName måste avslutas innan installationen kan fortsätta.\n\nAvsluta $BrandShortName för att fortsätta.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName måste avslutas för att avinstallationen ska kunna fortsätta.\n\nAvsluta $BrandShortName för att fortsätta.
